# makerpnp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/eda/diptrace/: example-1-PnP.csv  example-1.dch  example-1.dip
assets/eda/kicad/: test1-all-pos.csv  test1-top-pos.csv
assets/eda/kicad/test1/: test1.kicad_pcb  test1.kicad_prl  test1.kicad_pro  test1.kicad_sch
crates/assembly/: Cargo.toml
crates/assembly/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  lib.rs  parsers.rs
crates/criteria/: Cargo.toml
crates/criteria/src/: lib.rs
crates/eda/: Cargo.toml
crates/eda/src/: lib.rs  placement.rs  substitution.rs
crates/eda/src/diptrace/: csv.rs
crates/eda/src/kicad/: csv.rs
crates/part_mapper/: Cargo.toml
crates/part_mapper/src/: criteria.rs  lib.rs  part_mapper.rs  part_mapping.rs
crates/planner/: Cargo.toml
crates/planner/src/: core.rs  main.rs  opts.rs
crates/planner/tests/: planner.rs
crates/planner/tests/common/: mod.rs  phase_placement_builder.rs  project_builder.rs
crates/planner_app/: Cargo.toml
crates/planner_app/src/: lib.rs  view_renderer.rs
crates/planner_cli/: Cargo.toml
crates/planner_cli/src/: core.rs  main.rs  opts.rs
crates/planner_cli/tests/: planner.rs
crates/planner_cli/tests/common/: operation_history.rs
crates/planner_gui/: Cargo.toml
crates/planner_gui/assets/i18n/: en-US.json  es-ES.json
crates/planner_gui/docs/developer/: event_handling.md
crates/planner_gui/resources/translations/en-US/: planner.ftl
crates/planner_gui/resources/translations/es-ES/: planner.ftl
crates/planner_gui/src/: app_core.rs  document.rs  language.rs  languages.rs  main.rs  multi_document_container.rs  project.rs  route.rs  tabbed_document_container.rs  tabbed_ui.rs  toolbar.rs
crates/planner_gui/src/popups/: mod.rs  new_project.rs
crates/planner_gui/src/tabs/: document.rs  home.rs  mod.rs  project.rs
crates/planning/: Cargo.toml
crates/planning/src/: design.rs  lib.rs  operation_history.rs  part.rs  phase.rs  placement.rs  process.rs  project.rs  report.rs  variant.rs
crates/pnp/: Cargo.toml
crates/pnp/src/: lib.rs  load_out.rs  object_path.rs  part.rs  pcb.rs  placement.rs
crates/stores/: Cargo.toml
crates/stores/src/: assembly_rules.rs  eda_placements.rs  lib.rs  load_out.rs  part_mappings.rs  parts.rs  placements.rs  substitutions.rs
crates/stores/src/csv/: mod.rs
crates/stores/src/test/: mod.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
crates/util/src/assert/: mod.rs
crates/util/src/dynamic/: mod.rs
crates/util/src/test/: lock.rs  mod.rs
crates/variantbuilder/: Cargo.toml
crates/variantbuilder/src/: main.rs
crates/variantbuilder/tests/: variantbuilder.rs
src/: assembly.rs  dyn_eq.rs  lib.rs  main.rs  part.rs  part_mapping.rs
src/assembly/: assembly_variant.rs  mod.rs  rules.rs
src/cli/: args.rs  mod.rs  parsers.rs  tracing.rs
src/eda/: assembly_variant.rs  criteria.rs  eda_placement.rs  eda_substitution.rs  mod.rs  placement.rs  substitution.rs
src/eda/diptrace/: criteria.rs  csv.rs  mod.rs
src/eda/kicad/: criteria.rs  csv.rs  mod.rs
src/loaders/: assembly_rules.rs  eda_placements.rs  load_out.rs  mod.rs  part_mappings.rs  parts.rs  placements.rs  substitutions.rs
src/loaders/csv/: mod.rs
src/part/: mod.rs
src/part_mapper/: criteria.rs  mod.rs  part_mapping.rs
src/part_mapper/criteria/: mod.rs
src/placement/: mod.rs
src/planning/: design.rs  load_out.rs  mod.rs  operation_history.rs  part.rs  pcb.rs  phase.rs  placement.rs  process.rs  project.rs  reference.rs  report.rs  variant.rs
src/pnp/: load_out.rs  load_out_item.rs  mod.rs  object_path.rs  placement.rs
src/stores/: assembly_rules.rs  eda_placements.rs  load_out.rs  mod.rs  part_mappings.rs  parts.rs  placements.rs  substitutions.rs
src/stores/csv/: mod.rs
src/util/: mod.rs  sorting.rs
src/util/assert/: mod.rs
src/util/dynamic/: as_any.rs  dynamic_eq.rs
tests/: jobbuilder.rs  planner.rs  variantbuilder.rs
tests/common/: mod.rs  operation_history.rs  project_builder.rs  project_report_builder.rs
tests/inc/: int_test.rs  load_out_builder.rs  phase_placement_builder.rs  project_builder.rs  project_report_builder.rs
