[workspace]
# Due to the requirement for test dependencies, binaries we need to use the resolver otherwise
# the "testing" feature gets pulled in when you don't want it to.
# See https://github.com/rust-lang/cargo/issues/4866
# See https://doc.rust-lang.org/beta/cargo/reference/resolver.html#resolver-versions
resolver = "2"

members = [ "crates/cli",
    "crates/pnp",
    "crates/cli",
    "crates/planning",
    "crates/stores",
    "crates/part_mapper",
    "crates/assembly",
    "crates/eda",
    "crates/util",
    "crates/criteria",
    "crates/variantbuilder",
    "crates/planner",
]
