[workspace]
# Due to the requirement for test dependencies, binaries we need to use the resolver otherwise
# the "testing" feature gets pulled in when you don't want it to.
# See https://github.com/rust-lang/cargo/issues/4866
# See https://doc.rust-lang.org/beta/cargo/reference/resolver.html#resolver-versions
resolver = "2"

members = [ "crates/cli",
    "crates/pnp",
    "crates/cli",
    "crates/planning",
    "crates/stores",
    "crates/part_mapper",
    "crates/assembly",
    "crates/eda",
    "crates/util",
    "crates/criteria",
    "crates/variantbuilder",
    "crates/planner",
    "crates/planner_app",
]

[workspace.dependencies]
thiserror = { version = "1.0.63" }
clap = { version = "4.5.8" }
clap-verbosity-flag = { version = "2.2.1" }
argfile = { version = "0.2.1" }

tracing = { version = "0.1.40"}
tracing-subscriber = { version = "0.3.18" }
# only for `as_trace`
tracing-log = { version = "0.2.0" }
anyhow = { version = "1.0.86" }
regex = { version = "1.10.6" }
time = { version = "0.3.36" }
indexmap = { version = "2.4.0" }
heck = { version = "0.5.0" }

rust_decimal = { version = "1.35.0"}
rust_decimal_macros = { version = "1.35"}

serde = { version = "1.0.203" }
serde_json = { version = "1.0.127" }
serde_with = { version = "3.9.0" }
serde_regex = { version = "1.1.0" }

csv = { version = "1.3.0" }

rstest = { version = "0.22.0" }
assert_cmd = { version = "2.0.14" }
assert_fs = { version = "1.1.1" }
tempfile = { version = "3.10.1" }
indoc = { version = "2.0.5" }
predicates = { version = "3.1.0" }
predicates-tree = { version = "1.0.11" }
termtree = { version = "0.5.1"}
crossbeam-channel = { version = "0.5.13" }
crux_core = { version = "0.9.0-rc.1" }
