[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
planning = { path = "../planning" }
eda = { path = "../eda" }
pnp = { path = "../pnp" }
util = { path = "../util" }

clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag = { workspace = true }

tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
# only for `as_trace`
tracing-log = { workspace = true }
anyhow = {  workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
]