[package]
name = "planner"
version = "0.1.0"
edition = "2021"

[dependencies]
cli = { path = "../cli", features = ["tracing"]}
planning = { path = "../planning"}
pnp = { path = "../pnp"}
stores = { path = "../stores"}
util = { path = "../util"}

clap = { version = "4.5.16", features = ["derive"] }
clap-verbosity-flag = { version = "2.2.1" }
argfile = { version = "0.2.1"}
regex = "1.10.6"
tracing = "0.1.40"
anyhow = "1.0.86"

[dev-dependencies]
util = { path = "../util", features = ["testing"]}

assert_cmd = { version = "2.0.14" }
tempfile = { version = "3.10.1" }
indoc = { version = "2.0.5" }
predicates = {  version = "3.1.0" }
csv = { version = "1.3.0" }
rust_decimal = { version = "1.35.0"}
rust_decimal_macros = { version = "1.35"}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.127" }
time = { version = "0.3.36" }
