[package]
name = "planner_app"
version = "0.1.0"
edition = "2021"

[dependencies]
planning = { path = "../planning" }
pnp = { path = "../pnp"}
stores = { path = "../stores"}

crux_core = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
regex = { workspace = true }

serde_regex = "1.1.0"