[package]
name = "planner_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
planner_app = { path = "../planner_app" }

vizia = { git = "https://github.com/vizia/vizia.git", rev = "ae5770340fecc191ab01f0e785bc1a7a914d8d65" }

fluent = "0.16.1"

#futures-util = "0.3.30"

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
