[package]
name = "planner_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
planner_app = { path = "../planner_app" }

vizia = { git = "https://github.com/hydra/vizia.git", rev = "ced07cf12b8cfcf566b329db7d1546f40be2eb75" }

fluent = "0.16.1"

#futures-util = "0.3.30"

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
