[package]
name = "planner_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
planner_app = { path = "../planner_app" }

vizia = { git = "https://github.com/hydra/vizia.git", rev = "9dddbbb611d61dc2f4249f6c96a9b0c1039b8e6f" }

fluent = "0.16.1"

base64 = { workspace = true }

#futures-util = "0.3.30"
regex = { workspace = true }

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
