[package]
name = "stores"
version = "0.1.0"
edition = "2021"

[dependencies]
assembly = { path = "../assembly"}
criteria = { path = "../criteria"}
pnp = { path = "../pnp"}
eda = { path = "../eda"}
util = { path = "../util"}
planning = { path = "../planning"}
part_mapper = { path = "../part_mapper"}

anyhow = "1.0.86"
regex = "1.10.6"
thiserror = "1.0.63"

rust_decimal = { version = "1.35.0"}
rust_decimal_macros = { version = "1.35"}

csv = "1.3.0"

serde = { version = "1.0.203", features = ["derive"] }

tracing = { version = "0.1.40" }
heck = "0.5.0"

[dev-dependencies]
assert_fs = { version = "1.1.1" }
stores = { path = ".", features = ["testing"] }

[features]
testing = [
    "part_mapper/testing"
]